<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo_signin"
    tools:context=".Activity.SignInActivity">

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textcolor"
        android:text="Skip"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:textSize="18sp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/logo_signup2"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.88">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/roboto_black"
                        android:text="@string/login"
                        android:textColor="@color/textcolor"
                        android:textSize="22sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/roboto_black"
                        android:text="Email Address"
                        android:textColor="@color/textcolor"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/log_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/round"
                        android:hint="Enter your email"
                        android:padding="15dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/roboto_black"
                        android:text="Password"
                        android:textColor="@color/textcolor"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/log_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/round"
                        android:hint="Enter your password"
                        android:padding="15dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/log_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/i_agree_to_the"
                            android:textColor="@color/textcolor"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_and_conditions">
                        </TextView>


                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/round_sign"
                        android:text="Login"
                        android:textColor="@color/white">

                    </androidx.appcompat.widget.AppCompatButton>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="I don't have account"
                        android:gravity="center"/>
                        <TextView
                            android:id="@+id/log_signUp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/signUp"
                            android:textColor="@color/textcolor"
                            android:layout_marginStart="5dp" />
                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>